[gd_scene load_steps=26 format=2]

[ext_resource path="res://SharedResources/Fonts/EB_Garamond/EBGaramond-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/GameHUD.gd" type="Script" id=2]
[ext_resource path="res://SharedResources/ResourceIcons/Base.png" type="Texture" id=3]
[ext_resource path="res://GUI/Inventory.gd" type="Script" id=4]
[ext_resource path="res://GUI/ActionPointNum.gd" type="Script" id=5]
[ext_resource path="res://GUI/GameHUD_Font_Settings.tres" type="DynamicFont" id=6]
[ext_resource path="res://GUI/Currency.gd" type="Script" id=7]
[ext_resource path="res://GUI/TurnsRemaining.gd" type="Script" id=8]
[ext_resource path="res://GUI/lock.png" type="Texture" id=9]
[ext_resource path="res://GUI/BoardCard.tscn" type="PackedScene" id=10]
[ext_resource path="res://GUI/MerchantFlavor.tscn" type="PackedScene" id=11]
[ext_resource path="res://GUI/CityMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://GUI/MerchantPurchase.tscn" type="PackedScene" id=13]
[ext_resource path="res://GUI/MerchantMoveFeedback.tscn" type="PackedScene" id=14]
[ext_resource path="res://Audio/SFX/Dropoff.wav" type="AudioStream" id=15]
[ext_resource path="res://GUI/cog.png" type="Texture" id=16]
[ext_resource path="res://SharedResources/Fonts/EB_Garamond/EBGaramond-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://GUI/coin.png" type="Texture" id=18]

[sub_resource type="Animation" id=6]
resource_name = "IntroObj"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Obj1:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21, 123 ), Vector2( 21, 123 ), Vector2( -265, 418 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Obj1:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 267, 43 ), Vector2( 267, 43 ), Vector2( 267, 43 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Obj1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Turns1:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 182, 240 ), Vector2( 182, 240 ), Vector2( -270, -96 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Turns1:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 267, 43 ), Vector2( 267, 43 ), Vector2( 267, 43 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Turns1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 5, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Obj2:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 159 ), Vector2( 20, 159 ), Vector2( 43, 412 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Obj2:rect_size")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 207, 43 ), Vector2( 207, 43 ), Vector2( 207, 43 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Obj2:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 5, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Obj3:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 242, 126 ), Vector2( 242, 126 ), Vector2( 28, 411 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Obj3:rect_size")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 207, 43 ), Vector2( 207, 43 ), Vector2( 207, 43 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Obj3:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 5, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Obj4:rect_position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 241, 159 ), Vector2( 241, 159 ), Vector2( 27, 410 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Obj4:rect_size")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 207, 43 ), Vector2( 207, 43 ), Vector2( 207, 43 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Obj4:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 5, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Obj1:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 21, 123 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Obj1:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 267, 43 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Obj1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Turns1:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 182, 240 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Turns1:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 267, 43 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Turns1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Obj2:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, 159 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Obj2:rect_size")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 207, 43 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Obj2:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Obj3:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 242, 126 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Obj3:rect_size")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 207, 43 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Obj3:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Obj4:rect_position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 241, 159 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Obj4:rect_size")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 207, 43 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Obj4:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 17 )

[node name="GameHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Description")
autoplay = "IntroObj"
method_call_mode = 1
anims/IntroObj = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="Description" type="ColorRect" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 269.0
margin_top = -162.0
margin_right = 769.0
margin_bottom = 138.0
color = Color( 0.988235, 1, 0.752941, 1 )

[node name="ColorRect3" type="ColorRect" parent="Description"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 12.0
margin_top = -142.0
margin_right = 512.0
margin_bottom = 158.0
rect_scale = Vector2( 0.95, 0.95 )
color = Color( 0.184314, 0.0784314, 0.184314, 1 )

[node name="Label2" type="Label" parent="Description"]
margin_left = 24.0
margin_top = 22.0
margin_right = 480.0
margin_bottom = 65.0
rect_scale = Vector2( 1, 1.12 )
custom_fonts/font = ExtResource( 6 )
text = "The High Court of Mie is requesting your fleet of Merchants to:"
align = 1
valign = 1
autowrap = true

[node name="Label3" type="Label" parent="Description"]
margin_left = 25.0
margin_top = 195.0
margin_right = 480.0
margin_bottom = 238.0
custom_fonts/font = ExtResource( 6 )
text = "And Deliver them to the Castle in:"
align = 1
valign = 1

[node name="Obj1" type="Label" parent="Description"]
visible = false
margin_left = 21.0
margin_top = 123.0
margin_right = 288.0
margin_bottom = 166.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="Turns1" type="Label" parent="Description"]
margin_left = 182.0
margin_top = 240.0
margin_right = 449.0
margin_bottom = 283.0
rect_scale = Vector2( 0.622018, 0.88 )
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="Obj2" type="Label" parent="Description"]
margin_left = 20.0
margin_top = 159.0
margin_right = 227.0
margin_bottom = 202.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="Obj3" type="Label" parent="Description"]
margin_left = 242.0
margin_top = 126.0
margin_right = 449.0
margin_bottom = 169.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="Obj4" type="Label" parent="Description"]
margin_left = 241.0
margin_top = 159.0
margin_right = 448.0
margin_bottom = 202.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="Objectives" type="Control" parent="."]
margin_top = 4.0
margin_right = 248.0
margin_bottom = 196.0

[node name="ColorRect" type="ColorRect" parent="Objectives"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 426.0
margin_right = 200.0
margin_bottom = 501.0
rect_scale = Vector2( 1.2, 1 )
color = Color( 0.184314, 0.0784314, 0.184314, 1 )

[node name="Objective Text" type="Label" parent="Objectives"]
margin_left = 4.0
margin_top = 552.484
margin_right = 271.0
margin_bottom = 595.484
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Objectives"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 4.0
margin_top = 432.984
margin_right = 212.0
margin_bottom = 493.016
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="Objectives/VBoxContainer"]
margin_right = 267.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 6 )
text = "FIRST OBJECTIVE:"
align = 1
valign = 1

[node name="ColorRect2" type="ColorRect" parent="Objectives"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 240.0
margin_top = 426.0
margin_right = 570.0
margin_bottom = 466.0
rect_scale = Vector2( 0.73718, 1.90766 )
color = Color( 0.184314, 0.0784314, 0.184314, 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Objectives"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 241.0
margin_top = 433.0
margin_right = 449.0
margin_bottom = 570.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="Objectives/VBoxContainer2"]
visible = false
margin_right = 208.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 6 )
text = "OBJECTIVE"
valign = 1

[node name="Objective Text2-1" type="Label" parent="Objectives/VBoxContainer2"]
margin_right = 208.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="Objective Text2-2" type="Label" parent="Objectives/VBoxContainer2"]
margin_top = 47.0
margin_right = 208.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="Objective Text2-3" type="Label" parent="Objectives/VBoxContainer2"]
margin_top = 94.0
margin_right = 208.0
margin_bottom = 137.0
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="MerchantText" type="VBoxContainer" parent="Objectives"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 241.0
margin_top = 433.0
margin_right = 449.0
margin_bottom = 570.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="Objectives/MerchantText"]
visible = false
margin_right = 208.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 6 )
text = "OBJECTIVE"
valign = 1

[node name="Objective Text2-1" type="Label" parent="Objectives/MerchantText"]
visible = false
margin_right = 208.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="Objective Text2-2" type="Label" parent="Objectives/MerchantText"]
visible = false
margin_right = 208.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="Objective Text2-3" type="Label" parent="Objectives/MerchantText"]
visible = false
margin_right = 208.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 6 )
text = "23"
valign = 1

[node name="SecondObjCover" type="Control" parent="Objectives"]
margin_left = 219.0
margin_top = 478.0
margin_right = 259.0
margin_bottom = 518.0
rect_scale = Vector2( 0.84, 0.84 )

[node name="ColorRect3" type="ColorRect" parent="Objectives/SecondObjCover"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 25.0
margin_top = 32.381
margin_right = 345.0
margin_bottom = 72.381
rect_scale = Vector2( 0.910148, 2.26413 )
color = Color( 0.141176, 0.129412, 0.129412, 1 )

[node name="Lock" type="Sprite" parent="Objectives/SecondObjCover"]
position = Vector2( 61, 99 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="Objective Text" type="Label" parent="Objectives/SecondObjCover"]
margin_left = 122.619
margin_top = 65.4762
margin_right = 380.619
margin_bottom = 200.476
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 6 )
text = "UNLOCKS AFTER
1ST OBJECTIVE
IS COMPLETED"
valign = 1

[node name="Currency" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1008.0
margin_top = -8.0
margin_bottom = 44.0

[node name="ColorRect" type="ColorRect" parent="Currency"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_top = 8.0
margin_bottom = 47.0
color = Color( 0.184314, 0.0784314, 0.184314, 1 )

[node name="Undo" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0

[node name="Undo" type="Button" parent="Undo"]
margin_left = -100.0
margin_top = -48.0
margin_right = 254.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "UNDO"

[node name="Inventory" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 562.0
margin_top = 513.0
margin_right = -206.0
margin_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Inventory"]
anchor_right = 0.6
margin_top = 10.0
margin_right = 102.4
margin_bottom = 88.0
color = Color( 0.184314, 0.0784314, 0.184314, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -81.0
margin_right = 118.0
margin_bottom = 16.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="Label" type="Label" parent="Inventory/VBoxContainer"]
margin_right = 188.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 6 )
text = "INVENTORY"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Inventory/VBoxContainer"]
margin_top = 47.0
margin_right = 188.0
margin_bottom = 97.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Inventory/VBoxContainer/HBoxContainer"]
margin_left = 15.0
margin_right = 65.0
margin_bottom = 50.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Inventory/VBoxContainer/HBoxContainer"]
margin_left = 69.0
margin_right = 119.0
margin_bottom = 50.0
texture = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="Inventory/VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 173.0
margin_bottom = 50.0
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Inventory"]
stream = ExtResource( 15 )

[node name="MerchantPurchase" parent="." instance=ExtResource( 13 )]

[node name="MerchantMoveFeedback" parent="." instance=ExtResource( 14 )]
margin_left = -547.0
margin_top = -359.0
margin_right = 477.0
margin_bottom = 241.0

[node name="BoardCard" parent="." instance=ExtResource( 10 )]
__meta__ = {
"_edit_lock_": true
}

[node name="MerchantFlavor" parent="." instance=ExtResource( 11 )]
margin_left = 281.0
margin_top = 221.0
margin_right = 601.0
margin_bottom = 316.0

[node name="CityMenu" parent="." instance=ExtResource( 12 )]
visible = false
margin_left = -332.0
margin_top = -301.0
margin_right = -232.0
margin_bottom = 249.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 167.0
margin_bottom = 80.0
color = Color( 0.184314, 0.0784314, 0.184314, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 193.0
margin_bottom = 107.0

[node name="TopLeftUI" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 193.0
margin_bottom = 49.0
custom_constants/separation = 10

[node name="PauseButton" type="Button" parent="VBoxContainer/TopLeftUI"]
margin_right = 44.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 6 )
icon = ExtResource( 16 )

[node name="ActionPointsBox" type="HBoxContainer" parent="VBoxContainer/TopLeftUI"]
margin_left = 54.0
margin_right = 157.0
margin_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/TopLeftUI/ActionPointsBox"]
margin_top = 1.0
margin_right = 69.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
text = "Movement 
POINTS:  "
align = 1
valign = 1

[node name="ActionPointNum" type="Label" parent="VBoxContainer/TopLeftUI/ActionPointsBox"]
margin_left = 73.0
margin_top = 3.0
margin_right = 103.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "23"
align = 1
valign = 1
script = ExtResource( 5 )

[node name="TurnsRemaining" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 193.0
margin_bottom = 75.0
script = ExtResource( 8 )

[node name="Label" type="Label" parent="VBoxContainer/TurnsRemaining"]
margin_right = 98.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 5 )
text = "TURNS LEFT:"
valign = 1

[node name="CardCount" type="Label" parent="VBoxContainer/TurnsRemaining"]
margin_left = 102.0
margin_right = 118.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 5 )
text = "23"
valign = 1

[node name="EndTurnBtn" type="Button" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 96.0
margin_bottom = 107.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "END TURN"

[node name="CurrencyContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 181.0
margin_top = -8.0
margin_right = 541.0
margin_bottom = -523.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.6, 0.6 )
custom_constants/separation = 10
alignment = 2
script = ExtResource( 7 )

[node name="CoinTexture" type="TextureRect" parent="CurrencyContainer"]
margin_left = 1249.0
margin_right = 1281.0
margin_bottom = 85.0
texture = ExtResource( 18 )
stretch_mode = 6

[node name="CurrencyAmount" type="Label" parent="CurrencyContainer"]
margin_left = 1291.0
margin_right = 1384.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 3 )
text = "100"
align = 2

[connection signal="pressed" from="Undo/Undo" to="." method="_on_Undo_pressed"]
[connection signal="pressed" from="VBoxContainer/TopLeftUI/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/EndTurnBtn" to="." method="_on_EndTurnBtn_pressed"]
